updated resume email

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -29,9 +29,9 @@
           <!-- END: Cell Number -->
           <span class="hidden print:inline md:inline">|</span>
           <!-- START: Email Address -->
-          <a href="mailto:resume@harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
+          <a href="mailto:resume@harvhouse.com" target="_blank" class="flex flex-row gap-x-1">
             <i class="fa-solid fa-envelope my-auto"></i>
-            <span class="my-auto">resume@harvanchik.me</span>
+            <span class="my-auto">resume@harvhouse.com</span>
           </a>
           <!-- END: Email Address -->
           <span class="hidden print:inline md:inline">|</span>
