--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -215,6 +215,8 @@
             </ul>
           </div>
           <!-- END: Ice Hockey Official -->
+          <!-- Page Break for Print -->
+          <div class="hidden print:flex mb-20 h-1 w-full"></div>
           <!-- START: Junior Software Developer -->
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -745,6 +747,8 @@
         </div>
       </section>
       <!-- END: Certifications -->
+      <!-- Page Break for Print -->
+      <div class="hidden print:flex mb-20 h-1 w-full"></div>
 
       <!-- START: Projects -->
       <section id="projects">
