updated resume based on gabby's suggestions

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -107,7 +107,7 @@
                 <a href="https://www.imleagues.com/" target="_blank">IMLeagues</a> to coordinate league games</li
               >
               <li
-                >Maintain complete oversight of 2-3 intramural sports per semester via
+                >Maintain complete oversight of soccer, basketball, volleyball, and floor hcokey via
                 <a href="https://www.imleagues.com/" target="_blank">IMLeagues</a>, managing 3-5 distinct leagues per sport including Men's Recreation
                 and Competitive, Women's, CoRec, and Unified divisions</li
               >
@@ -120,20 +120,19 @@
                 semester to maintain optimal staffing levels</li
               >
               <li
-                >Serve as the primary point of contact for four sport clubs, overseeing travel logistics, ensuring budget compliance, and coordinating
+                >Serve as the primary point of contact for badminton, men's and women's basketball, cornhole, dodgeball, and bass fishing sport clubs, overseeing travel logistics, ensuring budget compliance, and coordinating
                 club events and tournaments</li
               >
               <li
-                >Engineer a streamlined payroll process that condenses two or more hours of manual work into less than 30 minutes, reducing processing
-                time by 75%</li
+                >Engineer a streamlined payroll process that condenses two or more hours of manual work into less than 30 minutes</li
               >
               <li
                 >Manage the "RECognition Points" leaderboard using <a href="https://www.whentowork.com/" target="_blank">WhenToWork</a> custom reports
-                and complex <a href="https://www.google.com/sheets/about/" target="_blank">Google Sheets</a> formulas to gamify performance and
+                and <a href="https://www.google.com/sheets/about/" target="_blank">Google Sheets</a> to gamify performance and
                 incentivize staff shift coverage</li
               >
               <li
-                >Direct my officials committee to curate game film from practicum students and lead film review sessions to enhance officials'
+                >Direct my officials committee to curate game film from nightly games and lead film review sessions to enhance officials'
                 technical mechanics and rule knowledge</li
               >
               <li
