remove cname and fix cliff hanger

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -336,8 +336,7 @@
                 detailed written evaluations</li
               >
               <li
-                >Directed nightly program logistics and utilized IMLeagues to verify player eligibility and check in players into their intramural
-                contents</li
+                >Directed nightly program logistics and utilized IMLeagues to verify player eligibility and take player attendance</li
               >
               <li
                 >Administered immediate first aid for injuries and utilized Connect2 software to document accidents, incidents, and ejections in
