fixed more cliff hangers

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -509,10 +509,10 @@
                 upcoming SCIOA Officials Clinic</li
               >
               <li
-                >Served as a clinician for the SCIOA Officials Clinic, creating and leading advanced flag football sessions and beginner-track
-                basketball modules</li
+                >Served as a clinician for the SCIOA Officials Clinic, creating and leading advanced-track flag football and beginner-track
+                basketball in-class and on-field/court sessions</li
               >
-              <li>Captured comprehensive notes during bi-monthly association meetings and distributed recap emails to member institutions</li>
+              <li>Captured comprehensive notes during association meetings and distributed recap emails to member institutions</li>
               <li>Contributed ideas that advanced professional development topics shared among intramural programs in the region</li>
             </ul>
           </div>
