fix page breaks

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -215,7 +215,7 @@
           </div>
           <!-- END: Ice Hockey Official -->
           <!-- Page Break for Print -->
-          <div class="hidden print:flex mb-20 h-1 w-full"></div>
+          <div class="hidden print:flex mb-[6rem] h-1 w-full"></div>
           <!-- START: Junior Software Developer -->
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -406,6 +406,8 @@
             </ul>
           </div>
           <!-- END: Intramural Sports Official -->
+           <!-- Page Break for Print -->
+      <div class="hidden print:flex h-1 w-full"></div>
           <!-- START: Summer Camp Counselor -->
           <div class="flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -746,7 +748,7 @@
       </section>
       <!-- END: Certifications -->
       <!-- Page Break for Print -->
-      <div class="hidden print:flex mb-20 h-1 w-full"></div>
+      <div class="hidden print:flex mb-22 h-1 w-full"></div>
 
       <!-- START: Projects -->
       <section id="projects">
