fixed date text too large for some on print view

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -223,7 +223,7 @@
                 <p class="font-bold">Junior Software Developer</p>
                 <a href="https://didintegration.com" target="_blank" class="italic">DiD Integration, Inc.</a>
               </div>
-              <div class="flex min-w-max flex-col text-right text-xs xs:text-sm">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">May 2023 - August 2023</p>
                 <p class="xs:hidden">May '23 - Aug. '23</p>
                 <p>Valencia, CA</p>
@@ -295,7 +295,7 @@
                 <p class="font-bold">Junior Software Developer</p>
                 <a href="https://didintegration.com" target="_blank" class="italic">DiD Integration, Inc.</a>
               </div>
-              <div class="flex min-w-max flex-col text-right text-xs xs:text-sm">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">July 2020 - November 2021</p>
                 <p class="xs:hidden">Jul. '20 - Nov. '21</p>
                 <p>Valencia, CA</p>
