--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -214,8 +214,6 @@
             </ul>
           </div>
           <!-- END: Ice Hockey Official -->
-          <!-- Page Break for Print -->
-          <div class="hidden print:flex mb-[6rem] h-1 w-full"></div>
           <!-- START: Junior Software Developer -->
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -231,8 +229,7 @@
             </div>
             <ul class="ml-5 list-disc">
               <li
-                >Programmed a script to convert IBM i RPG (Report Program Generator) routines into modern SQL queries, significantly reducing manual
-                conversion time</li
+                >Programmed a script to convert IBM i RPG (Report Program Generator) routines into modern SQL queries</li
               >
               <li
                 >Onboarded a newly hired developer by walking through local environments, deployment tooling, and the company's management practices
@@ -747,8 +744,6 @@
         </div>
       </section>
       <!-- END: Certifications -->
-      <!-- Page Break for Print -->
-      <div class="hidden print:flex mb-22 h-1 w-full"></div>
 
       <!-- START: Projects -->
       <section id="projects">
@@ -785,6 +780,10 @@
             </ul>
           </div>
           <!-- END: Case Play Database -->
+
+        <!-- Page Break for Print -->
+        <div class="hidden print:flex mb-[3rem] h-1 w-full"></div>
+
           <!-- START: Flag Football Play Generator -->
           <div id="project-flag-football-generator" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
