fixed more formatting issues

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -403,8 +403,6 @@
             </ul>
           </div>
           <!-- END: Intramural Sports Official -->
-           <!-- Page Break for Print -->
-      <div class="hidden print:flex h-1 w-full"></div>
           <!-- START: Summer Camp Counselor -->
           <div class="flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -432,6 +430,9 @@
         </div>
       </section>
       <!-- END: Work Experience -->
+
+      <!-- Page Break for Print -->
+      <div class="hidden print:flex mb-[3rem] h-1 w-full"></div>
 
       <!-- START: Organizations -->
       <section id="organizations">
