--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../../assets/styles/styles.css" />
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
     <!-- START: Scripts -->
-    <script src="https://kit.fontawesome.com/4f831b6978.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      referrerpolicy="no-referrer" />
     <!-- END: Scripts -->
   </head>
 
