Revamp HTML structure and styles for portfolio; update meta tags, enhance navigation, and improve layout responsiveness. Replace font imports with new selections for better typography.

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -7,17 +7,14 @@
     <link rel="stylesheet" href="../../assets/styles/styles.css" />
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
     <!-- START: Scripts -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" referrerpolicy="no-referrer" />
     <!-- END: Scripts -->
   </head>
 
   <body
-    class="resume layout relative mx-auto h-full max-w-[9.75in] pb-80 pt-10 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm bg-gray-50/80 print:bg-white">
+    class="resume layout relative mx-auto h-full max-w-[9.75in] bg-gray-50/80 pb-80 pt-10 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:bg-white print:pb-0 print:pt-0 print:text-xs xs:text-sm">
     <!-- START: Page -->
-    <div class="flex flex-col gap-y-2 print:gap-y-[3px] bg-white print:bg-transparent px-20 py-14 print:p-0 shadow-lg print:shadow-none">
+    <div class="flex flex-col gap-y-2 bg-white px-20 py-14 shadow-lg print:gap-y-[3px] print:bg-transparent print:p-0 print:shadow-none">
       <!-- START: Header -->
       <section id="header" class="flex flex-col -space-y-0.5 text-center">
         <h1 class="text-xl font-bold print:text-base">Jake Harvanchik</h1>
@@ -123,20 +120,18 @@
                 semester to maintain optimal staffing levels</li
               >
               <li
-                >Serve as the primary point of contact for badminton, men's and women's basketball, cornhole, dodgeball, and bass fishing sport clubs, overseeing travel logistics, ensuring budget compliance, and coordinating
-                club events and tournaments</li
+                >Serve as the primary point of contact for badminton, men's and women's basketball, cornhole, dodgeball, and bass fishing sport clubs,
+                overseeing travel logistics, ensuring budget compliance, and coordinating club events and tournaments</li
               >
-              <li
-                >Engineer a streamlined payroll process that condenses two or more hours of manual work into less than 30 minutes</li
-              >
+              <li>Engineer a streamlined payroll process that condenses two or more hours of manual work into less than 30 minutes</li>
               <li
                 >Manage the "RECognition Points" leaderboard using <a href="https://www.whentowork.com/" target="_blank">WhenToWork</a> custom reports
-                and <a href="https://www.google.com/sheets/about/" target="_blank">Google Sheets</a> to gamify performance and
-                incentivize staff shift coverage</li
+                and <a href="https://www.google.com/sheets/about/" target="_blank">Google Sheets</a> to gamify performance and incentivize staff shift
+                coverage</li
               >
               <li
-                >Direct my officials committee to curate game film from nightly games and lead film review sessions to enhance officials'
-                technical mechanics and rule knowledge</li
+                >Direct my officials committee to curate game film from nightly games and lead film review sessions to enhance officials' technical
+                mechanics and rule knowledge</li
               >
               <li
                 >Facilitate monthly professional development meetings with eight undergraduate student staff and conduct periodic consultation
@@ -231,9 +226,7 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li
-                >Programmed a script to convert IBM i RPG (Report Program Generator) routines into modern SQL queries</li
-              >
+              <li>Programmed a script to convert IBM i RPG (Report Program Generator) routines into modern SQL queries</li>
               <li
                 >Onboarded a newly hired developer by walking through local environments, deployment tooling, and the company's management practices
                 so they could contribute independently</li
@@ -302,7 +295,7 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Ramp up quickly during my first tenure by learning HTML, CSS, JavaScript, TypeScript, SQL, and Angular</li>
+              <li>Ramped up quickly during my first tenure by learning HTML, CSS, JavaScript, TypeScript, SQL, and Angular</li>
               <li
                 >Redesigned the <a href="https://agknowledge.com" target="_blank">subsidiary website</a> from scratch with
                 <a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a>, pairing modern layout systems with SEO and accessibility best
@@ -335,9 +328,7 @@
                 >Contributed to classroom and on-court/field training clinics, accelerating official growth through real-time verbal feedback and
                 detailed written evaluations</li
               >
-              <li
-                >Directed nightly program logistics and utilized IMLeagues to verify player eligibility and take player attendance</li
-              >
+              <li>Directed nightly program logistics and utilized IMLeagues to verify player eligibility and take player attendance</li>
               <li
                 >Administered immediate first aid for injuries and utilized Connect2 software to document accidents, incidents, and ejections in
                 compliance with safety protocols</li
@@ -435,7 +426,7 @@
       <!-- END: Work Experience -->
 
       <!-- Page Break for Print -->
-      <div class="hidden print:flex mb-[3rem] h-1 w-full"></div>
+      <div class="mb-[3rem] hidden h-1 w-full print:flex"></div>
 
       <!-- START: Organizations -->
       <section id="organizations">
@@ -512,8 +503,8 @@
                 upcoming SCIOA Officials Clinic</li
               >
               <li
-                >Served as a clinician for the SCIOA Officials Clinic, creating and leading advanced-track flag football and beginner-track
-                basketball in-class and on-field/court sessions</li
+                >Served as a clinician for the SCIOA Officials Clinic, creating and leading advanced-track flag football and beginner-track basketball
+                in-class and on-field/court sessions</li
               >
               <li>Captured comprehensive notes during association meetings and distributed recap emails to member institutions</li>
               <li>Contributed ideas that advanced professional development topics shared among intramural programs in the region</li>
@@ -785,8 +776,8 @@
           </div>
           <!-- END: Case Play Database -->
 
-        <!-- Page Break for Print -->
-        <div class="hidden print:flex mb-[3rem] h-1 w-full"></div>
+          <!-- Page Break for Print -->
+          <div class="mb-[3rem] hidden h-1 w-full print:flex"></div>
 
           <!-- START: Flag Football Play Generator -->
           <div id="project-flag-football-generator" class="flex flex-col gap-y-1">
